# t3o_server_old

./: CMakeLists.txt
src/: .async_serializer.hpp.swp  .event.hpp.swp  .protocol_detail.hpp.swp  async_serializer.hpp  event.hpp  event_test.cxx  exceptions.hpp  game_server.hpp  game_session.hpp  main.cxx  protocol_detail.hpp  serializer.hpp  server.hpp
src/detail/: .basic_async_reader.hpp.swo  .basic_async_reading_operation.hpp.swo  basic_async_reader.hpp  basic_async_reading_operation.hpp  basic_async_writer.hpp  basic_async_writing_operation.hpp  operation_base.hpp  operation_environment.hpp  operation_queue_base.hpp  protocol_detail.hpp  reading_operation_environment.hpp  writing_operation_environment.hpp
src/detail/serializers/: .async_itext_serializer.hpp.swp  text_iserializer.hpp  text_oserializer.hpp
src/old/: async_iserializer.hpp  async_oserializer.hpp
